# simplegametool

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
Code/: Code.cpp  Code.hpp  CodeBuilder.cpp  CodeBuilder.hpp  CodeGenerator.cpp  CodeGenerator.hpp  DebugInfo.cpp  DebugInfo.hpp  Error.cpp  Error.hpp  Lexems.cpp  Lexems.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  readme.md
Engine/: AnimatedSprite.cpp  AnimatedSprite.hpp  Asset.cpp  Asset.hpp  AudioObject.cpp  AudioObject.hpp  ContentManager.cpp  ContentManager.hpp  Error.cpp  Error.hpp  FunctionRef.cpp  GameObject.cpp  GameObject.hpp  Input.hpp  Instructions.hpp  MemoryObject.cpp  MemoryObject.hpp  ObjectType.cpp  ObjectType.hpp  Runnable.hpp  Scene.cpp  Scene.hpp  StandardLibrary.cpp  StandardLibrary.hpp  TypeManager.cpp  TypeManager.hpp  Value.cpp  Value.hpp
Engine/Content/: Asset.cpp  Asset.hpp  ContentManager.cpp  ContentManager.hpp  Label.cpp  Label.hpp  SceneDescriptor.cpp  SceneDescriptor.hpp  Sound.cpp  Sound.hpp
Engine/Execution/: FunctionRef.hpp  Instructions.hpp  Runnable.hpp  Value.cpp  Value.hpp
Engine/Object/: ArrayObject.cpp  ArrayObject.hpp  AudioObject.cpp  AudioObject.hpp  GameObject.cpp  GameObject.hpp  MemoryObject.cpp  MemoryObject.hpp  ObjectType.cpp  ObjectType.hpp  TextObject.cpp  TextObject.hpp
Engine/System/: Input.hpp  Random.cpp  Random.hpp  StandardLibrary.cpp  StandardLibrary.hpp
Project/: Errors.cpp  Errors.hpp  Project.cpp  Project.hpp  readme.md
examples/helloworld /: project.json
examples/helloworld/assets/: dosfont.json
examples/helloworld/scenes/: main.json
examples/pong/: project.json
examples/pong/assets/: ball.json  goal.json  hit.json
examples/pong/scenes/: main.fus  main.json
examples/shooter/: project.json
examples/shooter/assets/: ball.json  dosfont.json
examples/shooter/scenes/: main.fus  main.json
testproject/: project.json  readme.md
testproject/assets/: beep1.json  img1.json
testproject/scenes/: main.scn
